
syntax = "proto3";

package usercenter.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
//import "validate/validate.proto";

option go_package = "github.com/costa92/k8s-krm-go/pkg/api/usercenter/v1;v1";


service UserService {
  // Login
  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/auth/login",
      body: "*",
    };
  }

  // Logout
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/auth/logout",
      body: "*",
    };
  }
}

message UserReply {
  string userID = 1;
  string username = 2;
  string nickname = 3;
  string password = 4;
  string email = 5;
  string phone = 6;
  int64 secrets = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
}


message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string refresh_token = 1;
  string access_token = 2;
  string type = 3;
  int64 expiresAt = 4;
}

message LogoutRequest {}

message RefreshTokenRequest {}